--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -12,7 +12,8 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/hangman_picture_here"
         android:src="@drawable/img_0" />
 
@@ -21,10 +22,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/progress"
-        android:layout_margin="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:paddingTop="0dp"
+        android:layout_gravity="center"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
-
     </LinearLayout>
 
 </RelativeLayout>
